# pslink

./: .gitignore  Cargo.toml  Cross.toml  Dioxus.toml  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  README.md  Release.md  TODO.md  aarch64.Dockerfile  cross-aarch64.Dockerfile  cross-x86_64.Dockerfile  cross.Dockerfile  sqlx-data.json  x86_64.Dockerfile
.github/workflows/: README.md  build_docker_arm64.yml  build_docker_x86_64.yml  create_multiarch_image.yml  docker-publish.yml  release.yml  rust.yml
.sqlx/: query-01e68928ea67ef301d8ea72a320fe747dafbfaa398a22731effb93d23ae16a77.json  query-0d5cc1ab073e15c4306ef2bfc89aeefd6daa409766741c21f9eb0115b0f24eb1.json  query-109ddc9fa55a36541ed1a866d362ff666bb39c3672f72000e786f86b514dc239.json  query-2c544ae2e18b70271164f75ca06851ec971a7426222ef8ccab86e20226056408.json  query-33646a50d72c492e7cf9d25d2fc7c51ba1b99687c1d6e2e818c68bbaf143bf50.json  query-3ad5584fcb0c2685339e471320e8d0c091b684ffe86912a1f2540eee1444889d.json  query-5624dec3d87f37ae3f77fb265ace3075b8e46bdcc0af273e0f28d4e1a89b6e9e.json  query-5919b8824209c31a76178f30b3d52f385931ee0f3aa17e65f8647ad15a3595d8.json  query-5d892d21ed6b4ccc3ddedb3a7469385f001f6ff9f41b19faa67b754ad8f7fc4b.json  query-77a21769284cb3df457d806d6e04088ae4f99d92c535fd15c79828e46ee3ae6f.json  query-7a52eae6cb72e4daac95a99d15113ab09571329733ea121fecc55d18dfdb1c45.json  query-86474d3afa501597c7eeef4136a60d39c8a9cd5c327c4dff3776b4cfc37f1dc5.json  query-8670a2dacd013de68831d0a45d927ea9f473d86100387fc85c9b9802668c3de4.json  query-9cb2f491eab760ba60ede5b3e730b84d061fc09627579ff05bc63d3e27fe8fb7.json  query-ba18635aa20b30d92172fa60fa22c6dba7e5cb2f57106e9d13cdab556af80fd3.json  query-c2dc413e14456373d915dbfffebf888255618fe346acba0bd8b9a04defa08254.json  query-eb5c92f5a47a730bf82d92fc0107913cb37d57d99f0170538f1b1da14665bbb5.json  query-f6cd43935b88accd904538e59f59684786b9960d7b8cd7b7d924cfcfb65e1dbe.json
app/: Cargo.toml  README.md
app/locales/de/: main.ftl
app/locales/en/: main.ftl
app/src/: i18n.rs  lib.rs  navigation.rs
app/src/pages/: home.rs  list_links.rs  list_users.rs  mod.rs
backend/: Cargo.toml
backend/migrations/: 20250712045813_add_indices_for_faster_stats.sql
backend/src/: auth.rs  auth_api.rs  cli.rs  export_api.rs  lib.rs  link_api.rs  models.rs  redirect_links.rs  user_api.rs
doc/: BuildContainer.md
doc/img/: README.md
locales/: Cargo.toml  README.md
locales/de/: main.ftl
locales/en/: main.ftl
locales/src/: lib.rs
migrations/: 20210318172317_initialmigration.up.sql  20210330103013_addinglanguage.sql  20210401070030_on_delete_cascade.sql
migrations/2021-02-03-113236_initial/: down.sql  up.sql
migrations/2021-02-09-175834_add_statistics/: down.sql  up.sql
migrations/2021-02-10-072528_add_user_profiles/: down.sql  up.sql
pslink/: Cargo.toml  README.md  build.rs  sqlx-data.json
pslink/migrations/: 20210330103013_addinglanguage.sql
pslink/src/: lib.rs  models.rs  queries.rs  views.rs
pslink/static/: admin.css  style.css
pslink/static/wasm/: .gitignore
pslink/templates/: base.html  edit_link.html  edit_profile.html  login.html  submission.html  view_link.html  view_profile.html
pslink/tests/: integration-tests.rs
shared/: Cargo.toml  README.md
shared/src/: datatypes.rs  lib.rs  tests.rs
shared/src/apirequests/: general.rs  links.rs  mod.rs  users.rs
src/: cli.rs  forms.rs  lib.rs  main.rs  models.rs  queries.rs  schema.rs  views.rs
static/: admin.css  sorttable.js  style.css
templates/: admin.html  edit_link.html  edit_profile.html  index.html  index_users.html  login.html  not_found.html  signup.html  submission.html  view_link.html  view_profile.html
tests/: integration-tests.rs
translations/: de-DE.ftl  en-US.ftl
translations/de/: DE.ftl
translations/en/: US.ftl
ui/: Cargo.toml
ui/assets/: favicon.icns
ui/assets/styling/: floating_button.css  links.css  lists.css  login.css  navbar.css  vanishing_message.css
ui/src/: home.rs  lib.rs  links.rs  login.rs  navbar.rs  translations.rs
ui/src/links/: link_display.rs  link_edit.rs  mod.rs  new_link_button.rs  stats.rs
ui/src/users/: database_export.rs  mod.rs  new_user_button.rs  user_display.rs  user_edit.rs
web/: .env  Cargo.toml
web/src/: main.rs
