[workspace]
resolver = "3"
members = ["ui", "web", "backend", "shared"]

[workspace.dependencies]
axum = { version = "0.7.0" }
axum_session = { version = "0.12.1" }
axum_session_auth = { version = "0.12.1" }
anyhow = { version = "1.0.95" }

dioxus = { version = "0.6" }
dioxus-fullstack = { version = "0.6" }
sqlx = { version = "0.7" }
ui = { path = "ui" }
backend = { path = "backend" }
pslink-shared = { path = "shared" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
