[package]
name = "pslink-app"
authors = ["Dietrich <dietrich@teilgedanken.de>"]
categories = ["web-programming", "network-programming", "web-programming::http-server", "command-line-utilities"]
description = "A wasm frontend for pslink. The frontend communicates via json API."
edition = "2018"
keywords = ["url", "link", "webpage", "actix", "web"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/enaut/pslink/"
version = "0.4.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fluent = "0.15"
seed = "0.8"
serde = {version="1.0", features = ["derive"]}
unic-langid = "0.9"
strum_macros = "0.21"
strum = "0.21"
enum-map = "1"
qrcode = "0.12"
image = "0.23"

pslink-shared = { version="0.4", path = "../shared" }
pslink-locales = { version="0.4", path = "../locales" }

[dependencies.web-sys]
version = "0.3"
features = [
    "IntersectionObserver",
    "IntersectionObserverInit",
    "IntersectionObserverEntry",
]
