[package]
name = "app"
authors = ["Dietrich <dietrich@teilgedanken.de>"]
categories = [
    "web-programming",
    "network-programming",
    "web-programming::http-server",
    "command-line-utilities",
]
description = "A wasm frontend for pslink. The frontend communicates via json API."
edition = "2018"
keywords = ["url", "link", "webpage", "actix", "web"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/enaut/pslink/"
version = "0.3.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
seed = { version = "0.10", features = ["routing"] }
fluent = "0.16"
serde = "1.0"
unic-langid = "0.9"
strum_macros = "0.26"
strum = "0.26"
enum-map = "2"
qrcode = "0.14"
image = "0.25"
wasm-bindgen = "=0.2.93"
stdweb = { git = "https://github.com/Dampfwalze/stdweb.git", branch = "fix-dyn" }
gloo-console = "0.3.0"
gloo-net = "0.6.0"
chrono = "0.4"
web-sys = { version = "0.3", features = [
    "IntersectionObserver",
    "IntersectionObserverEntry",
    "IntersectionObserverInit",
] }

shared = { path = "../shared" }
