[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, optional = true }
axum_session = { workspace = true, optional = true }
axum_session_auth = { workspace = true, optional = true, features = [
    "sqlite-rustls",
] }
#axum_session_redispool = { version = "0.5.0", optional = true }
dioxus = { workspace = true, features = ["fullstack"] }
dioxus-fullstack = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true, features = [
    "macros",
    "migrate",
    "postgres",
    "sqlite",
    "_unstable-all-types",
    "tls-native-tls",
    "runtime-tokio",
], optional = true }
tokio = { version = "1.40", optional = true }
pslink-shared = { workspace = true }
async-trait = { version = "0.1.86", optional = true }
argon2 = { version = "0.5.3", optional = true }
once_cell = { version = "1.20.2", optional = true }
enum-map = { version = "2.7", features = ["serde"] }
serde = "1.0"
chrono = "0.4"
rand = { version = "0.8", optional = true }


[features]
server = [
    "dep:tokio",
    "dep:axum",
    "dioxus-fullstack/axum",
    "dep:axum_session",
    "dep:axum_session_auth",
    "dep:sqlx",
    "dep:async-trait",
    "dep:argon2",
    "dep:once_cell",
    "dep:rand",
    #    "dep:axum_session_redispool",
]
