[package]
name = "pslink-locales"
authors = ["Dietrich <dietrich@teilgedanken.de>"]
categories = ["web-programming", "network-programming", "web-programming::http-server", "command-line-utilities"]
description = "The translation strings for pslink"
edition = "2018"
keywords = ["url", "link", "webpage", "actix", "web"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/enaut/pslink/"
version = "0.4.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
fluent = "0.16"
serde = {version="1.0", features = ["derive"]}
unic-langid = "0.9"

pslink-shared = { version="0.4", path = "../shared" }
