[package]
authors = ["Dietrich <dietrich@teilgedanken.de>"]
build = "build.rs"
categories = [
    "web-programming",
    "network-programming",
    "web-programming::http-server",
    "command-line-utilities",
]
description = "A simple webservice that allows registered users to create short links including qr-codes.\nAnyone can visit the shortened links. This is an ideal setup for small busines or for publishing papers."
edition = "2018"
keywords = ["url", "link", "webpage", "actix", "web"]
license = "MIT OR Apache-2.0"
name = "pslink"
readme = "README.md"
repository = "https://github.com/enaut/pslink/"
version = "0.4.8"
[build-dependencies]
actix-web-static-files = "4.0"
static-files = "0.2"

[dependencies]
actix-identity = "0.8"
actix-rt = "2.2"
actix-web = "4.9"
actix-web-static-files = "4"
actix-files = "0.6"
argonautica = "0.2"
clap = { version = "4.5", features = ["cargo", "env", "string", "unicode"] }
dotenv = "0.15.0"
fluent-langneg = "0.14"
image = "0.25"
opentelemetry = { version = "0.27" }
opentelemetry_sdk = { version = "0.27", features = [
    "rt-tokio-current-thread",
    "rt-tokio",
    "logs",
] }
opentelemetry-stdout = { version = "0.27.0", features = ["trace"] }
opentelemetry-semantic-conventions = "0.27"
opentelemetry-appender-tracing = "0.27"
qrcode = "0.14"
rand = "0.8"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
static-files = { version = "0.2", default-features = false }
thiserror = "2"
tracing-actix-web = "0.7"
tracing-opentelemetry = "0.28"
async-trait = "0.1"
enum-map = { version = "2.7", features = ["serde"] }
indexmap = "2.7"
argon2 = "0.5"

pslink-shared = { version = "0.4", path = "../shared" }
pslink-locales = { version = "0.4", path = "../locales" }
opentelemetry-otlp = { version = "0.27.0", features = [
    "serde",
    "serde_json",
    "trace",
    "tonic",
] }
actix-session = { version = "0.10.1", features = ["cookie-session"] }

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.fluent-templates]
version = "0.13"

[dependencies.sqlx]
features = [
    "sqlite",
    "sqlx-macros",
    "chrono",
    "migrate",
    "runtime-tokio-rustls",
    "runtime-tokio",
]
version = "0.8"

[dependencies.tracing]
features = ["log"]
version = "0.1"

[dependencies.tracing-subscriber]
features = ["registry", "env-filter"]
version = "0.3"

[dev-dependencies]
actix-server = "2"
tempdir = "0.3"
tokio = { version = "1", features = ["full"] }
assert_cmd = "2.0"
predicates = "3"
serde_json = "1.0"
reqwest_cookie_store = "0.8"

[dev-dependencies.reqwest]
features = ["cookies", "json"]
version = "0.12"
