[package]
authors = ["Dietrich <dietrich@teilgedanken.de>"]
categories = [
    "web-programming",
    "network-programming",
    "web-programming::http-server",
    "command-line-utilities",
]
description = "A simple webservice that allows registered users to create short links including qr-codes.\nAnyone can visit the shortened links. This is an ideal setup for small busines or for publishing papers."
edition = "2024"
keywords = ["url", "link", "webpage", "actix", "web"]
license = "MIT OR Apache-2.0"
name = "pslink-shared"
readme = "../pslink/README.md"
repository = "https://github.com/enaut/pslink/"
version = "0.5.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
enum-map = { version = "2.7", features = ["serde"] }
strum_macros = "0.26"
strum = "0.26"
sqlx = { workspace = true, features = [
    "macros",
    "migrate",
    "postgres",
    "sqlite",
    "_unstable-all-types",
    "tls-native-tls",
    "runtime-tokio",
], optional = true }
dioxus = { workspace = true, features = ["fullstack"] }


[features]
server = [
    "dep:sqlx",
    #    "dep:axum_session_redispool",
]
