[package]
authors = ["Dietrich <dietrich@teilgedanken.de>"]
categories = [
    "web-programming",
    "network-programming",
    "web-programming::http-server",
    "command-line-utilities",
]
description = "A simple webservice that allows registered users to create short links including qr-codes.\nAnyone can visit the shortened links. This is an ideal setup for small busines or for publishing papers."
edition = "2024"
keywords = ["url", "link", "webpage", "actix", "web"]
license = "MIT OR Apache-2.0"
name = "pslink-shared"
readme = "../pslink/README.md"
repository = "https://github.com/enaut/pslink/"
version = "0.5.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
enum-map = { version = "2.7", features = ["serde"] }
strum_macros = "0.27"
strum = "0.27"
dioxus = { workspace = true, features = ["fullstack"] }
rand = { version = "0.8", optional = true }


[features]
server = ["dep:rand"]
