[package]
name = "ui"
version = "0.5.2"
edition = "2024"

[dependencies]
indexmap = "*"
fast_qr = { version = "0.13", features = ["svg", "image"] }
dioxus = { workspace = true }
backend = { workspace = true }
pslink-shared = { workspace = true }
wasmtimer = "*"
dioxus-i18n = { workspace = true }
web-sys = { version = "0.3", features = [
    "IntersectionObserver",
    "IntersectionObserverEntry",
    "IntersectionObserverInit",
    "BlobPropertyBag",
] }
chrono = "*"
