[package]
name = "ui"
version = "0.5.2"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
indexmap = "*"
fast_qr = { version = "0.13", features = ["svg", "image"] }
dioxus = { workspace = true }
backend = { workspace = true }
pslink-shared = { workspace = true }
wasmtimer = "*"
dioxus-i18n = { workspace = true }
js-sys = "0.3"
wasm-bindgen = "0.2"
base64 = "0.22"
web-sys = { version = "0.3", features = [
    "IntersectionObserver",
    "IntersectionObserverEntry",
    "IntersectionObserverInit",
    "BlobPropertyBag",
    "Blob",
    "Url",
    "Document",
    "Window",
    "HtmlAnchorElement",
    "Element",
    "HtmlElement",
    "CssStyleDeclaration",
] }
chrono = "*"
