[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
ui = { workspace = true }
backend = { workspace = true }
pslink-shared = { workspace = true }
dioxus-i18n = "0.4.2"

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server", "backend/server", "pslink-shared/server"]
