[package]
name = "web"
version = "0.5.2"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
dioxus = { workspace = true, features = ["router", "fullstack"] }
ui = { workspace = true }
backend = { workspace = true }
pslink-shared = { workspace = true }
dioxus-i18n = { workspace = true }
server_fn = "0.8"

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server", "backend/server", "pslink-shared/server"]
